[package]
name = "day08"
version = "0.1.0"
authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
edition = "2021"

[dependencies]
aoclib = { git = "https://github.com/coriolinus/aoclib.git" }
clap = { version = "4.4.11", features = ["derive"] }
color-eyre = "0.5.10"
derive_more = { version = "1.0.0", features = ["from_str", "into"] }
thiserror = "1.0.22"
