[package]
name = "day09"
version = "0.1.0"
authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
edition = "2021"

[dependencies]
aoclib = { git = "https://github.com/coriolinus/aoclib.git" }
clap = { version = "4.5.23", features = ["derive"] }
color-eyre = "0.6.3"
dlv-list = "0.6.0"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "2.0.6"
