[package]
name = "day10"
version = "0.1.0"
authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
edition = "2021"

[dependencies]
aoclib = { git = "https://github.com/coriolinus/aoclib.git" }
clap = { version = "4.5.23", features = ["derive"] }
color-eyre = "0.6.3"
thiserror = "2.0.7"
