[package]
name = "day11"
version = "0.1.0"
edition = "2021"

[dependencies]
aoclib = { git = "https://github.com/coriolinus/aoclib.git" }
clap = { version = "4.5.23", features = ["derive"] }
color-eyre = "0.5.11"
derive_more = { version = "1.0.0", features = ["deref", "deref_mut", "from_str"] }

[dev-dependencies]
maplit = "1.0.2"
pretty_assertions = "1.4.1"
