[package]
name = "day15"
version = "0.1.0"
edition = "2021"

[dependencies]
aoclib = { git = "https://github.com/coriolinus/aoclib.git" }
clap = { version = "4.4.11", features = ["derive"] }
color-eyre = "0.5.10"
derive_more = { version = "1.0.0", features = ["deref", "from", "into"] }
parse-display = "0.10.0"
